# learning_qt6

./: CMakeLists.txt  Makefile  calculator
.qt/: QtDeploySupport.cmake
include/: calculator.hpp  main.hpp
proj/: CMakeCache.txt  Makefile  cmake_install.cmake
proj/.qt/: QtDeploySupport.cmake
proj/calculator_autogen/: deps  moc_predefs.h
src/: calculator.cpp  main.cpp
